--- a/clients/web/index.html
+++ b/clients/web/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="preload" href="/assets/fonts/woff/subset-Inter-Regular.woff" as="font" type="font/woff" crossorigin/>
-    <link rel="preload" href="/assets/fonts/woff2/subset-Inter-Regular.woff2" as="font" type="font/woff2" crossorigin/>
+    <link rel="preload" href="/assets/fonts/woff/Manrope.woff" as="font" type="font/woff" crossorigin/>
+    <link rel="preload" href="/assets/fonts/woff2/Manrope.woff2" as="font" type="font/woff2" crossorigin/>
 
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/tailwindcss.css" rel="stylesheet" />
 
-    <link rel="icon" type="image/svg+xml" href="/buildFlow.png" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuildFlow</title>
   </head>
-  <body>
+  <body class="text-base-100 bg-base-content">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
